--- a/client/client.html
+++ b/client/client.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Our simple HTTP server</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
-  
+
   <script>
+    const handleFetchResponse = async (response) => {
+      const content = document.querySelector('#content');
+      switch (response.status) {
+        case 200:
+          content.innerHTML = '<b>Success</b>';
+          break;
+        case 400:
+          content.innerHTML = '<b>Bad Request</b>';
+          break;
+        case 401:
+          content.innerHTML = '<b>Unauthorized</b>';
+          break;
+        case 403:
+          content.innerHTML = '<b>Forbidden</b>';
+          break;
+        case 404:
+          content.innerHTML = '<b>Not Found</b>';
+          break;
+        case 500:
+          content.innerHTML = '<b>Internal Server Error</b>';
+          break;
+        case 501:
+          content.innerHTML = '<b>Not Implemented</b>';
+          break;
+        default:
+          content.innerHTML = '<b>Response Code Not Implemented</b>';
+          break;
+      }
+
+      let resObj;
+      const acceptedType = response.headers.get('Content-Type');
+      if (acceptedType === 'application/json') {
+        // Parse JSON
+        resObj = await response.json();
+        content.innerHTML += `<p>${resObj.response}</p>`;
+      }
+      else if (acceptedType === 'text/xml') {
+        // Parse XML
+        let resText = await response.text();
+        resObj = new DOMParser().parseFromString(resText, 'text/xml');
+        content.innerHTML += `<p>${resObj.querySelector('response').textContent}</p>`;
+      }
+    }
+
+    const fetchData = async (url, type) => {
+      const options = {
+        method: 'GET',
+        headers: { 'Accept': type }
+      }
+      let response = await fetch(url, options);
+      handleFetchResponse(response);
+    }
+
+    const init = () => {
+      const sendBtn = document.querySelector('#send');
+      const pageSelect = document.querySelector('#page');
+      const typeSelect = document.querySelector('#type');
+
+      sendBtn.addEventListener('click', () => {
+        console.log(`Selected values: ${pageSelect.value}, type: ${typeSelect.value}`);
+        fetchData(pageSelect.value, typeSelect.value);
+      })
+    }
+
+    window.onload = init;
 
   </script>
 </head>
+
 <body>
   <section id="top">
     <h3>Status Code Tests</h3>
@@ -29,4 +96,5 @@
   <section id="content">
   </section>
 </body>
+
 </html>
